--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
     })(window, document, 'script', 'dataLayer', 'GTM-W945DMM');</script>
 
   <!-- End Google Tag Manager -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body class="mat-typography">
